--- a/Ui.html
+++ b/Ui.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html> 
     <head>
-        
+       <title>TodoList</title> 
     </head>
     <body>
         <h1>TODO LIST</h1>
