--- a/Ui.html
+++ b/Ui.html
@@ -6,15 +6,15 @@
        <link rel="stylesheet" href="css.css">
 
     </head>
-    <body>
+    <body class="body">
         <p class="title">TO-DO</p>
         <div class="container"> 
             <input class="custom-input" type="text" name="" id="userInput" placeholder="Your todo list">
-            <button class="submit-button" onclick ='addToCart()'> Add Todo</button>
+            <button class="submit-button" onclick ='addToCart()'> Todo</button>
 
         </div>
     
-        <ul id="thisDiv"> </ul>
+        <ul class="centerTodo" id="thisDiv"> </ul>
 
 
 
