--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
             <input class="custom-input" type="text" name="" id="userInput" placeholder="Your todo list">
             <button class="submit-button" onclick ='addToCart()'> Todo</button>
         </div>
-    
+
+
         <ul class="centerTodo" id="thisDiv"> </ul>
 
         <script
         // srcing from index.js
-         src="index.js"> </script>
+         src="todo.js"> </script>
     </body>
 </html>
